--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -13,6 +13,6 @@ data:
   # Azure Storage Account Credentials for Product Service image uploads
   # REPLACE WITH YOUR ACTUAL BASE64 ENCODED VALUES from your Azure Storage Account
   # Example: echo -n 'myblobstorageaccount' | base64
-  AZURE_STORAGE_ACCOUNT_NAME: "ZHVyZ2VzaHNhbWFyaXlh" 
+  AZURE_STORAGE_ACCOUNT_NAME: "d2VlazA4a2hlbQ==" 
   # Example: echo -n 'your_storage_account_key_string' | base64
-  AZURE_STORAGE_ACCOUNT_KEY: "aEFNQ24rbkh2cmhwSGFEaW5jSnAxNFlHaU5nTnJja2NJR05Bc3Y5VXZPUlpsblJkbkVUR3drdTREdSszblBDR3E4ZEVTVjlFNE1jMytBU3RubmZ5QVE9PQ=="
+  AZURE_STORAGE_ACCOUNT_KEY: "azRMc3ZsbFZKVURlQW1tTFFpakRrS3ptS1JMbG45ZDZURE9pR0xyUlNiQnJJeVVmekdzbkZhdWVqY0lXbWU3ejJwVDVmb1hoTnRUNytBU3QzL0RjRXc9PQ=="
